# bossfinder

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.sh  run_batch.py  run_cli.py
src/bossfinder/: __init__.py  api.py  config.py  crew.py  merger.py
src/bossfinder/agents/: email_agent.py  github_agent.py  linkedin_agent.py  merger_agent.py  news_agent.py  ranker_agent.py  twitter_agent.py  web_search_agent.py
src/bossfinder/models/: person.py
src/bossfinder/tasks/: search_tasks.py
src/bossfinder/tools/: apollo_tool.py  clearbit_tool.py  github_tool.py  hunter_tool.py  news_tool.py  proxycurl_tool.py  snov_tool.py  twitter_tool.py
