[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bossfinder"
version = "0.1.0"
description = "Find key people and contacts at any company using multi-source CrewAI agents"
requires-python = ">=3.10"
dependencies = [
    # Core orchestration
    "crewai>=0.80.0",
    "crewai-tools>=0.17.0",

    # API layer
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",

    # LLM providers
    "openai>=1.30.0",
    "anthropic>=0.26.0",

    # Search tools
    "google-search-results>=2.4.2",   # SerpAPI
    "tavily-python>=0.3.3",
    "duckduckgo-search>=6.1.0",

    # HTTP client (used by hunter_tool, etc.)
    "requests>=2.31.0",
    "httpx>=0.27.0",

    # Data handling
    "python-dotenv>=1.0.0",
    "rapidfuzz>=3.6.0",               # fuzzy name deduplication
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["src"]
